Bug 558073: [13] Var type with switch expression + yield doesn't infer the correct numeric type
Change-Id: I14d83f918479da63f84a45721813ff2b51320393
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>